--- a/app/static/css/message.css
+++ b/app/static/css/message.css
@@ -46,6 +46,63 @@
 	line-height: 1.4;
 }
 
+/* Extra */
+#messages{
+  overflow-x: hidden;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.message pre{
+  white-space: pre-wrap;
+  word-break: break-word;
+  font-size: 15px;
+  line-height: 1.4;
+  font-family: 'Inter', system-ui, sans-serif;
+  text-align: left;
+}
+
+.message p{
+  font-size: 15px;
+  line-height: 1.4;
+  font-family: 'Inter', system-ui, sans-serif;
+}
+
+.message.user{
+  display: flex;
+  align-items: flex-start;
+  margin: 10px 0;
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: -3px;
+}
+
+.message.user .avatar-container{
+  margin-right: 5px;
+  order: 2;
+  margin-left: 10px;
+}
+
+.message.user .content{
+  margin-left: auto;
+  order: 1;
+  background-color: hsl(0, 0%, 20%);
+  padding: 10px;
+  border-radius: 18px;
+  text-align: right;
+  max-width: 80%;
+  width: fit-content;
+  word-break: break-word;
+}
+
+
+.message.chat-bot .content{
+  margin-left: 10px;
+  width: 100%;
+  
+}
+
+
 @media screen and (max-height: 720px) {
 	.message {
 		padding: 12px;
@@ -86,6 +143,7 @@
 		font-size: 13px;
 		line-height: 1.3;
 	}
+
 }
 
 
@@ -102,7 +160,7 @@
 	}
 
 	.message.chat-bot .content{
-		margin-left: -10px;
+		margin-left: 5px;
 		width: 100%;
   
 	}
