--- a/app/static/css/right-sidebar.css
+++ b/app/static/css/right-sidebar.css
@@ -340,57 +340,19 @@
   white-space: nowrap;
 }
 
-#messages{
-  overflow-x: hidden;
-  width: 100%;
-  box-sizing: border-box;
+@media screen  and (min-width:300px) and (min-height:720px) {
+  .menu-button-2{
+    right: 0px;
+    top: 5px;
+  }
+
+  .menu-button-2.rotated {
+    padding: 10px;
+    right: 10px;
+    top: 19px;
+  }
+
+  .menu-button i {
+	  transition: 0.55s;
 }
-
-.message pre{
-  white-space: pre-wrap;
-  word-break: break-word;
-  font-size: 15px;
-  line-height: 1.4;
-  font-family: 'Inter', system-ui, sans-serif;
-  text-align: left;
-}
-
-.message p{
-  font-size: 15px;
-  line-height: 1.4;
-  font-family: 'Inter', system-ui, sans-serif;
-}
-
-.message.user{
-  display: flex;
-  align-items: flex-start;
-  margin: 10px 0;
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: -3px;
-}
-
-.message.user .avatar-container{
-  margin-right: 5px;
-  order: 2;
-  margin-left: 10px;
-}
-
-.message.user .content{
-  margin-left: auto;
-  order: 1;
-  background-color: hsl(0, 0%, 20%);
-  padding: 10px;
-  border-radius: 18px;
-  text-align: right;
-  max-width: 80%;
-  width: fit-content;
-  word-break: break-word;
-}
-
-
-.message.chat-bot .content{
-  margin-left: 10px;
-  width: 100%;
-  
 }
