--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -185,7 +185,7 @@
 .menu-button-2.rotated {
 	padding: 10px;
 	right: 24px;
-	top: 19px;
+	top: 18px;
 }
 
 .menu-button.rotated:hover{
